--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "@nextcloud/dialogs": "^4.0.1",
     "@nextcloud/router": "^2.0.1",
     "@nextcloud/vue": "^7.8.4",
-    "vue": "^2.7.0"
+    "vue": "^2.7.0",
+    "vue-material-design-icons": "^5.2.0"
   },
   "browserslist": [
     "extends @nextcloud/browserslist-config"
