--- a/package.json
+++ b/package.json
@@ -25,7 +25,10 @@
     "@nextcloud/router": "^2.0.1",
     "@nextcloud/vue": "^7.8.4",
     "vue": "^2.7.0",
-    "vue-material-design-icons": "^5.2.0"
+    "vue-material-design-icons": "^5.2.0",
+    "vue-router": "^3.6.5",
+    "vuex-router-sync": "^5.0.0",
+    "vuex-store": "^1.0.0"
   },
   "browserslist": [
     "extends @nextcloud/browserslist-config"
