--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "vue": "^2.7.0",
     "vue-material-design-icons": "^5.2.0",
     "vue-router": "^3.6.5",
+    "vue-simple-icons": "^7.5.0",
     "vuex-router-sync": "^5.0.0",
     "vuex-store": "^1.0.0"
   },
