--- a/.github/workflows/lint-php-cs.yml
+++ b/.github/workflows/lint-php-cs.yml
@@ -30,6 +30,7 @@ jobs:
           php-version: 8.2
           coverage: none
           ini-file: development
+          extensions: mailparse
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
