--- a/composer.json
+++ b/composer.json
@@ -28,7 +28,7 @@
 		"psalm:update-baseline:force": "psalm.phar --threads=1 --update-baseline --set-baseline=tests/psalm-baseline.xml",
 		"psalm:clear": "psalm.phar --clear-cache && psalm --clear-global-cache",
 		"psalm:fix": "psalm.phar --alter --issues=InvalidReturnType,InvalidNullableReturnType,MissingParamType,InvalidFalsableReturnType",
-		"test": [
+		"test:unit": [
 			"phpunit tests/Unit/Controller/*.php"
 		]
 	},
