--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,7 @@
 	],
 	"require-dev": {
 		"php": "^8.0",
-		"phpunit/phpunit": "^9",
+		"phpunit/phpunit": "^9.5",
 		"sabre/dav": "^4.1",
 		"sabre/xml": "^2.2",
 		"symfony/event-dispatcher": "^5.3.11",
@@ -42,5 +42,10 @@
 	},
 	"require": {
 		"ext-mailparse": "*"
+	},
+	"autoload-dev": {
+		"psr-4": {
+			"OCP\\": "vendor/nextcloud/ocp/OCP"
+		}
 	}
 }
