--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
 		"vue": "^2.7.16",
 		"vue-material-design-icons": "^5.3.1",
 		"vue-router": "^3.6.5",
-		"vue-simple-icons": "^7.5.0"
+		"vue-simple-icons": "^7.5.0",
+		"toastify-js": "^1.12.0"
 	},
 	"browserslist": [
 		"extends @nextcloud/browserslist-config"
